--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             
             At 7STAR, we are committed to delivering high-quality IT solutions that propel your business forward. Explore the possibilities with us and let's redefine the digital landscape together.
         </p>
-        <a href="./contact.html"><button>Connect With Us</button></a>
+        <a style=" position: absolute;" href="./contact.html"><button>Connect With Us</button></a>
       </div>
     </section>
     <script>
