--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
               <div class="screen-body-item left">
                 <div class="app-title">
                   <span>CONTACT</span>
-                  <span>US US</span>
+                  <span>US</span>
                 </div>
                 <div class="app-contact">CONTACT INFO : star7@gmail.com</div>
               </div>
