--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <ul class="menu-links">
           <span id="close-menu-btn" class="material-symbols-outlined">close</span>
           <li><a href="#">Home</a></li>
-          <li><a href="#">Products</a></li>
+          <li><a href="./projects.html">Projects</a></li>
           <li><a href="#">Services</a></li>
           <li><a href="#">About us</a></li>
           <li><a href="./contact.html">Contact us</a></li>
