--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="form.css">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body style="z-index: -1; background-image: url('./7starBg.jpg'); background-size: cover;">
     <div class="snow"></div>
     <header>
       <nav class="navbar">
@@ -16,7 +16,7 @@
         <ul class="menu-links">
           <span id="close-menu-btn" class="material-symbols-outlined">close</span>
           <li><a href="./index.html">Home</a></li>
-          <li><a href="#">Products</a></li>
+          <li><a href="#">Projects</a></li>
           <li><a href="#">Services</a></li>
           <li><a href="#">About us</a></li>
           <li><a href="./contact.html">Contact us</a></li>
