--- a/projects.html
+++ b/projects.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="projects.css">
 </head>
-<body style="background-color: black;">
-  <div class="snow"></div>
+<body style="z-index: -1; background-image: url('./7starBg.jpg'); background-size: cover;">
+  
     <header>
         <nav class="navbar">
           <a class="logo" href="#"><img src="./7STAR-removebg-preview.png"/></a>
